naily facts initial feature add
fix logging and nailyfacts

added link status and cancel buttons

moved some files to common, split dns and pxe

--- a/fuelmenu/settings.yaml
+++ b/fuelmenu/settings.yaml
@@ -1,4 +1,4 @@
-HOSTNAME: "nailgun"
+HOSTNAME: "fuel"
 DNS_DOMAIN: "example.com"
 DNS_SEARCH: "example.com"
 DNS_UPSTREAM: "8.8.8.8"
@@ -8,6 +8,8 @@ ADMIN_NETWORK:
   cidr: "10.20.0.0/24"
   netmask: "255.255.255.0"
   size: "256"
-  first: "10.20.0.129"
+  static_start: "10.20.0.10"
+  static_end: "10.20.0.120"
+  first: "10.20.0.130"
   last: "10.20.0.254"
 
