fix /etc/hosts, notify of primary interface for fuelmenu
fix shell, fix domain name for fuelmenu

clean up failed dialog code and comments

fix /etc/hosts duplication bug

remove knoppix isolinux

--- a/packages/rpm/fuelmenu/fuelmenu/settings.yaml
+++ b/packages/rpm/fuelmenu/fuelmenu/settings.yaml
@@ -1,6 +1,6 @@
 HOSTNAME: "fuel"
-DNS_DOMAIN: "example.com"
-DNS_SEARCH: "example.com"
+DNS_DOMAIN: "domain.tld"
+DNS_SEARCH: "domain.tld"
 DNS_UPSTREAM: "8.8.8.8"
 
 ADMIN_NETWORK:
