Change usage of ostf repos to one
Replace usage of ostf_test_sha and ostf_plugin_sha
to ostf_sha only in next files:

* nailgun.api.handlers.version.py
* nailgun.settings.yaml
* nailgun.test.unit.test_version_handler
* nailgun.wsgi.py

Change-Id: Ieeff26e97cad7e39afe1ca400b1a81f553920a33

--- a/nailgun/nailgun/settings.yaml
+++ b/nailgun/nailgun/settings.yaml
@@ -7,8 +7,7 @@ VERSION:
   nailgun_sha: "Unknown build"
   astute_sha: "Unknown build"
   fuellib_sha: "Unknown build"
-  ostf_tests_sha: "Unknown build"
-  ostf_plugin_sha: "Unknown build"
+  ostf_sha: "Unknown build"
 
 FUEL_KEY: "Unknown"
 
