Rename '/etc/naily.facts' to '/etc/astute.yaml' in logs dump settings
Change-Id: I44304edebc1b2dee313546e574ced5ef8e2716a9

--- a/nailgun/nailgun/settings.yaml
+++ b/nailgun/nailgun/settings.yaml
@@ -289,7 +289,7 @@ DUMP:
         to_file: lvm_lvdisplay.txt
     slave:
       - type: file
-        path: /etc/naily.facts
+        path: /etc/astute.yaml
       - type: command
         command: df -h
         to_file: df.txt
