Added brctl show command into shotgun
Change-Id: I1b69831e82db76c38f332ed6f03d7f27db3ff70c

--- a/nailgun/nailgun/settings.yaml
+++ b/nailgun/nailgun/settings.yaml
@@ -299,6 +299,9 @@ DUMP:
       - type: command
         command: netstat -anp
         to_file: netstat.txt
+      - type: command
+        command: brctl show
+        to_file: brctl_show.txt
     slave:
       - type: file
         path: /etc/astute.yaml
@@ -341,3 +344,6 @@ DUMP:
       - type: command
         command: netstat -anp
         to_file: netstat.txt
+      - type: command
+        command: brctl show
+        to_file: brctl_show.txt
