Add logs from ostf app to fuelweb ui
Change-Id: I0caee66640a3f9dd3c3e7fbe6a9d9bf1d410ed41

--- a/nailgun/nailgun/settings.yaml
+++ b/nailgun/nailgun/settings.yaml
@@ -120,6 +120,11 @@ LOGS:
     <<: *local_log_type
     <<: *remote_syslog_log_format
     path: '/var/log/naily/naily.log'
+  - id: ostf
+    name: "HealthCheck"
+    <<: *local_log_type
+    <<: *python_log_format
+    path: "/var/log/ostf.log"
   - id: puppet
     name: "Releases"
     <<: *local_log_type
