Add debootstrap & in-target to "Other install logs"
The most informational logs since install stage...

Fixes: #PRD-2048

Change-Id: Id4c72d87406d8a9b3dad74f82291cb5ac2cebc0e
Signed-off-by: Bogdan Dobrelya <bogdando@mail.ru>

--- a/nailgun/nailgun/settings.yaml
+++ b/nailgun/nailgun/settings.yaml
@@ -175,6 +175,18 @@ LOGS:
     <<: *remote_syslog_log_format
     <<: *install_log_group
     path: 'install/ks-post.log'
+  - id: 'install/debootstrap-ubuntu'
+    name: "debootstrap"
+    <<: *remote_log_type
+    <<: *remote_syslog_log_format
+    <<: *install_log_group
+    path: "debootstrap.log"
+  - id: 'install/in-target-ubuntu'
+    name: "in-target"
+    <<: *remote_log_type
+    <<: *remote_syslog_log_format
+    <<: *install_log_group
+    path: "in-target.log"
 # Bootstrap node logs.
   - id: 'bootstrap/dmesg'
     name: "dmesg"
