Add Openstack logs group
Implements: #PRD-2462

Change-Id: If494126c1319255fccea518baa3a204798bf1cc6
Signed-off-by: Bogdan Dobrelya <bogdando@mail.ru>

--- a/nailgun/nailgun/settings.yaml
+++ b/nailgun/nailgun/settings.yaml
@@ -102,6 +102,8 @@ LOG_GROUPS:
     group: 'Other install logs'
   - &bootstrap_log_group
     group: 'Bootstrap logs'
+  - &os_log_group
+    group: 'Openstack logs'
 
 LOGS:
 # Master node logs.
