Change puppet log name because we now we use puppet apply instead of puppet agent
Change-Id: I45ded00640666a53875995f283a0354a53f2f4df

--- a/nailgun/nailgun/settings.yaml
+++ b/nailgun/nailgun/settings.yaml
@@ -144,7 +144,7 @@ LOGS:
     <<: *remote_log_type
     <<: *remote_syslog_log_format
     <<: *main_install_log_group
-    path: 'puppet-agent.log'
+    path: 'puppet-apply.log'
   - id: 'install/anaconda'
     name: "anaconda"
     <<: *remote_log_type
