--- a/nailgun/package.json
+++ b/nailgun/package.json
@@ -15,6 +15,7 @@
     "grunt-contrib-requirejs": "~0.4.1",
     "grunt-contrib-less": "~0.8.2",
     "grunt-bower": "~0.7.0",
-    "grunt-bower-task": "~0.3.4"
+    "grunt-bower-task": "~0.3.4",
+    "grunt-contrib-watch": "~0.5.3"
   }
 }
