--- a/nailgun/package.json
+++ b/nailgun/package.json
@@ -11,7 +11,7 @@
     "requirejs": "~2.1.9",
     "uglifyjs": "~2.3.6",
     "less": "~1.5.1",
-    "grunt-jslint": "1.1.1",
+    "grunt-jslint": "~1.1.1",
     "grunt-contrib-requirejs": "~0.4.1",
     "grunt-contrib-less": "~0.8.2",
     "bower": "~1.2.7",
