--- a/nailgun/nailgun/settings.yaml
+++ b/nailgun/nailgun/settings.yaml
@@ -77,7 +77,7 @@ LOG_FORMATS:
       - ALERT
       - EMERG
   - &python_log_format
-    regexp: '^(?P<date>\d{4}-\d{2}-\d{2}\s\d{2}:\d{2}:\d{2})\s(?P<level>[A-Z]+)\s(?P<text>.*)$'
+    regexp: '^(?P<date>\d{4}-\d{2}-\d{2}\s\d{2}:\d{2}:\d{2})(?P<msecs>\.\d{3})?\s(?P<level>[A-Z]+)\s(?P<text>.*)$'
     date_format: '%Y-%m-%d %H:%M:%S'
     levels:
       - DEBUG
