--- a/nailgun/bower.json
+++ b/nailgun/bower.json
@@ -10,7 +10,8 @@
         "jquery.timeout": "http://jquery-timeout.googlecode.com/files/jquery.timeout-1.1.0.js",
         "backbone.stickit": "https://raw.github.com/NYTimes/backbone.stickit/b450a07b2cecb3ad0343096f29e0332d5f9508b0/backbone.stickit.js",
         "i18next": "1.7.1",
-        "backbone-deep-model": "0.10.4"
+        "backbone-deep-model": "0.10.4",
+        "bootstrap": "2.3.2"
     },
     "exportsOverride": {
         "jquery": {
@@ -42,6 +43,10 @@
         },
         "backbone-deep-model": {
             "js": "distribution/deep-model.js"
+        },
+        "bootstrap":{
+            "js": "docs/assets/js/bootstrap.js",
+            "less": "less/*.less"
         }
     },
     "ignore": [
