Use svg impages instead of plantuml sphinx plugin
Change-Id: I9cc44d4fa8a5055768938011e5f599740a8b989f

--- a/docs/Makefile
+++ b/docs/Makefile
@@ -47,6 +47,11 @@ $(PLANTUML):
 	wget http://downloads.sourceforge.net/project/plantuml/plantuml.jar -O $(PLANTUML)
 	$(ACTION.TOUCH)
 
+diagrams: $(PLANTUML)
+	@echo "Building diagrams"
+	@java -jar $(PLANTUML) _diagrams/
+	@echo "Build finished"
+
 html: $(PLANTUML)
 	$(SPHINXBUILD) -b html -W $(ALLSPHINXOPTS) $(BUILDDIR)/html
 	@echo
