--- a/nailgun/nailgun/settings.yaml
+++ b/nailgun/nailgun/settings.yaml
@@ -372,7 +372,7 @@ MCO_PASSWORD: "guest"
 MCO_CONNECTOR: "rabbitmq"
 
 PUPPET_MASTER_HOST: "localhost"
-PUPPET_VERSION: "2.7.19"
+PUPPET_VERSION: ""
 
 DNS_DOMAIN: "example.com"
 DNS_SERVERS: "127.0.0.1"
