--- a/nailgun/nailgun/settings.yaml
+++ b/nailgun/nailgun/settings.yaml
@@ -12,7 +12,7 @@ VERSION:
 FUEL_KEY: "Unknown"
 
 FIXTURES_TO_UPLOAD:
-  - "openstack.json"
+  - "openstack.yaml"
   - "start_notification.json"
   - "admin_network.json"
 
