--- a/nailgun/nailgun/settings.yaml
+++ b/nailgun/nailgun/settings.yaml
@@ -13,7 +13,7 @@ FUEL_KEY: "Unknown"
 
 FIXTURES_TO_UPLOAD:
   - "global.json"
-  - "openstack.json"
+  - "openstack.yaml"
   - "start_notification.json"
   - "admin_network.json"
 
