Minor development docs fixes
1. Removed build warnings
2. Turned warnings into errors
3. Added link to User Guide

Change-Id: I1ba23a85308d873e3fb8867115d6a41d89034a6d

--- a/docs/Makefile
+++ b/docs/Makefile
@@ -48,7 +48,7 @@ $(PLANTUML):
 	$(ACTION.TOUCH)
 
 html: $(PLANTUML)
-	$(SPHINXBUILD) -b html $(ALLSPHINXOPTS) $(BUILDDIR)/html
+	$(SPHINXBUILD) -b html -W $(ALLSPHINXOPTS) $(BUILDDIR)/html
 	@echo
 	@echo "Build finished. The HTML pages are in $(BUILDDIR)/html."
 
