--- a/nailgun/requirements.txt
+++ b/nailgun/requirements.txt
@@ -9,6 +9,7 @@ decorator==3.4.0
 kombu==2.1.8
 netaddr==0.7.10
 netifaces==0.8
+oslo.config==1.3.0a0.5.g03930e3
 pycrypto==2.6
 psycopg2==2.4.6
 simplejson==2.6.2
