--- a/nailgun/requirements.txt
+++ b/nailgun/requirements.txt
@@ -1,3 +1,4 @@
+Babel==1.3
 Jinja2==2.7
 Paste==1.7.5.1
 PyYAML==3.10
@@ -6,9 +7,11 @@ amqplib==1.0.2
 anyjson==0.3.1
 argparse==1.2.1
 decorator==3.4.0
+iso8601==0.1.8
 kombu==2.1.8
 netaddr==0.7.10
 netifaces==0.8
+oslo.config==1.2.1
 pycrypto==2.6
 psycopg2==2.4.6
 simplejson==2.6.2
