--- a/nailgun/requirements.txt
+++ b/nailgun/requirements.txt
@@ -1,3 +1,4 @@
+Babel==1.3
 Jinja2==2.7
 Paste==1.7.5.1
 PyYAML==3.10
@@ -9,6 +10,7 @@ decorator==3.4.0
 kombu==2.1.8
 netaddr==0.7.10
 netifaces==0.8
+oslo.config==1.2.1
 pycrypto==2.6
 psycopg2==2.4.6
 simplejson==2.6.2
