Enable Mirantis logo by setting special parameter
Change-Id: I7abf3a729a484e893720e61c73b49e3c1f51c431
Closes: bug #1261295

--- a/nailgun/nailgun/settings.yaml
+++ b/nailgun/nailgun/settings.yaml
@@ -8,6 +8,7 @@ VERSION:
   astute_sha: "Unknown build"
   fuellib_sha: "Unknown build"
   ostf_sha: "Unknown build"
+  mirantis: "no"
 
 FUEL_KEY: "Unknown"
 
