Initial support of database migrations
Change-Id: Ia340fa64b15e40fc2bb87125f746f5bf1b0530f8

--- a/nailgun/openstack-common.conf
+++ b/nailgun/openstack-common.conf
@@ -2,13 +2,14 @@
 base=nailgun
 module=db
 module=db.sqlalchemy
+module=db.sqlalchemy.migration_cli
+module=excutils
+module=fileutils
 module=gettextutils
 module=importutils
-module=lockutils
-module=fileutils
-module=excutils
-module=log
 module=jsonutils
-module=timeutils
 module=local
+module=lockutils
+module=log
 module=test
+module=timeutils
