--- a/nailgun/requirements.txt
+++ b/nailgun/requirements.txt
@@ -1,20 +1,23 @@
-Jinja2==2.7
-Paste==1.7.5.1
-PyYAML==3.10
-SQLAlchemy==0.7.8
+alembic==0.6.2
 amqplib==1.0.2
 anyjson==0.3.1
 argparse==1.2.1
 decorator==3.4.0
+fysom==1.0.11
+Jinja2==2.7
+jsonschema==2.0.0
 kombu==2.1.8
+Mako==0.9.1
+MarkupSafe==0.18
 netaddr==0.7.10
 netifaces==0.8
-pycrypto==2.6
+Paste==1.7.5.1
 psycopg2==2.4.6
+pycrypto==2.6
+PyYAML==3.10
+Shotgun==0.1.0
 simplejson==2.6.2
+SQLAlchemy==0.7.8
 web.py==0.37
 wsgilog==0.3
 wsgiref==0.1.2
-fysom==1.0.11
-jsonschema==2.0.0
-Shotgun==0.1.0
